# proteomics-clinical-index-engine

./: CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
api/: main.py
app/: streamlit_app.py
data/: README.md
docs/: clinical_safety_notes.md  data_card.md  data_dictionary.md  literature_benchmark.md  model_card.md  problem_statement.md  proteomics_foundations.md  system_architecture.md  technical_risk_register.md  validation_protocol.md
notebooks/: 01_olink_npx_qc.ipynb  02_high_dimensional_ml_baselines.ipynb  03_proteomic_clinical_index_scoring.ipynb  04_calibration_confidence_and_review_gates.ipynb  05_clinician_report_and_audit_trail.ipynb
proteomics-clinical-index-engine/: .gitignore  pyproject.toml  requirements.txt
proteomics-clinical-index-engine/.github/workflows/: tests.yml
proteomics-clinical-index-engine/data/sample/: olink_synthetic_npx.csv
proteomics-clinical-index-engine/docs/: validation_notes.md
proteomics-clinical-index-engine/reports/: candidate_protein_signature.csv
proteomics-clinical-index-engine/src/proteomics_index/: __init__.py  modeling.py  synthetic_data.py
reports/: baseline_model_results.csv  calibration_bins.csv  calibration_validation_metrics.csv  clinical_routing_summary.csv  confidence_logic_examples.csv  example_audit_record.json  example_clinician_report.md  example_patient_top_protein_drivers.csv  patient_index_examples.csv  protein_missingness.csv  qc_summary.csv  report_completeness_checks.csv  sample_qc_summary.csv  top_protein_drivers.csv
tests/: test_qc.py  test_scoring_confidence.py
(+10 files in other folders)
