[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proteomics-clinical-index-engine"
version = "0.1.0"
description = "Clinical AI starter pipeline for Olink-style proteomics data"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
]

[tool.setuptools.packages.find]
where = ["src"]
